自動更新忘れ警告機能追加
その他細かい修正

--- a/SpeechCast/Resources/resView.html
+++ b/SpeechCast/Resources/resView.html
@@ -8,7 +8,7 @@
 			objResArea.appendChild(element);
 		}
 		function clearRes() {
-			var objResArea = document.getElementById("resArea");;
+			var objResArea = document.getElementById("resArea");
 			objResArea.innerHTML = "";
 		}
 		</script>
